# pix

./: LICENSE  README.md  api.py  cfg.py  pyproject.toml  unit_converter.py  utils.py
ocr/: ocr.py  ocr_api.py
pm/: api.py  cfg.py  image_merger.py
ps/: cfg.py  data_collector.py  image_splitter.py
uc/: cfg.py  unit_converter.py
