[project]
name = "pix"
version = "0.1.0"
description = "Image Related Apps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "opencv-python>=4.13.0.90",
    "paddleocr==3.3.3",
    "paddlepaddle==3.2.2",
    "pillow>=12.1.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
    "vllm>=0.15.0",
]